# cmake-deploy-test

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  Main.qml  main.cpp
app/mods/core/qml/modules/FooUi/: Clock.qml  qmldir
foo/: CMakeLists.txt
foo/Editor/: CMakeLists.txt  Main.qml  main.cpp
foo/LibDebugUiUtils/: CMakeLists.txt  ConsoleBackend.cpp  ConsoleBackend.h  DebugUiUtilsGlobal.h
foo/LibDebugUiUtils/qml/: ConsoleView.qml
foo/LibEditor/: CMakeLists.txt  EditorGlobal.h  QmlValidator.cpp  QmlValidator.h
foo/LibFoo/: CMakeLists.txt  Clipboard.cpp  Clipboard.h  FooGlobal.h
foo/LibFoo/js/: script.js
foo/LibFoo/qml/: TinyButton.qml
